--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"@vitejs/plugin-react": "^4.7.0",
 		"jsdom": "^26.1.0",
 		"lighthouse": "^12.8.1",
+		"playwright": "^1.55.0",
 		"sharp": "^0.34.3",
 		"source-map-explorer": "^2.5.3",
 		"vitest": "^3.2.4"
